Fix layout issues

--- a/src/pages/quest/quest.module.scss
+++ b/src/pages/quest/quest.module.scss
@@ -103,10 +103,8 @@
 .tile {
   cursor: pointer;
   width: 100%;
-  height: auto;
-  aspect-ratio: 1/ 1;
+  height: 100%;
   max-width: 120px;
-  min-width: 40px;
   transition: all;
   perspective: 1000px;
   z-index: 0;
@@ -120,6 +118,10 @@
       .tileModal {
         opacity: 1;
         pointer-events: all;
+
+        @include mobile {
+          display: none;
+        }
       }
     }
   }
@@ -138,34 +140,18 @@
   }
 }
 
-.tileModal {
-  opacity: 0;
-  pointer-events: none;
-  position: absolute;
-  left: 50%;
-  top: 0;
-  z-index: 1000;
-  transition: 0.5s all;
-
-  .tileModalClose {
-    display: none;
-  }
-
-  .tileModalContent {
-    position: relative;
-    width: 300px;
-    height: 180px;
-  }
-
-  @include mobile {
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100vw;
-    height: 100vh;
+.mobileTileModal {
+  .tileModal {
     display: flex;
     align-items: center;
     justify-content: center;
+    position: fixed;
+    opacity: 1;
+    pointer-events: all;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
 
     .tileModalClose {
       display: block;
@@ -184,13 +170,37 @@
       width: 100%;
       height: 100%;
       z-index: 10;
-      background: rgba(0,0,0,.9);
+      background: rgba(0, 0, 0, 0.5);
       backdrop-filter: blur(10px);
     }
 
     .tileModalContent {
       z-index: 1000;
     }
+  }
+}
+
+.tileModal {
+  opacity: 0;
+  pointer-events: none;
+  position: absolute;
+  left: 50%;
+  top: 0;
+  z-index: 1000;
+  transition: 0.5s all;
+
+  @include mobile {
+    display: none;
+  }
+
+  .tileModalClose {
+    display: none;
+  }
+
+  .tileModalContent {
+    position: relative;
+    width: 300px;
+    height: 180px;
   }
 }
 
